HelloWorld/force-app/main/default/objects/Flight_schedule__c/Flight_schedule__c.object-meta.xml
<CustomObject>
    <label>Flight schedule</label>
    <nameField>
        <displayFormat>FSID-{000000}</displayFormat>
        <label>Flight schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight schedules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>