HelloWorld/force-app/main/default/objects/Flight_schedule__c/fields/Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>Destination_Country__c</fullName>
    <label>Destination Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>