HelloWorld/force-app/main/default/objects/Flight_schedule__c/fields/Destination_State__c.field-meta.xml
<CustomField>
    <fullName>Destination_State__c</fullName>
    <label>Destination State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>