HelloWorld/force-app/main/default/objects/Flight_schedule__c/fields/E_mail__c.field-meta.xml
<CustomField>
    <fullName>E_mail__c</fullName>
    <label>E mail</label>
    <type>Email</type>
</CustomField>