HelloWorld/force-app/main/default/objects/Flight_schedule__c/fields/First_Pilot_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Pilot_Name__c</fullName>
    <label>First Pilot Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>