HelloWorld/force-app/main/default/objects/Flight_schedule__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Flight schedules</relationshipLabel>
    <relationshipName>Flight_schedules</relationshipName>
    <type>Lookup</type>
</CustomField>