HelloWorld/force-app/main/default/objects/Flight_schedule__c/fields/Flight_arrived__c.field-meta.xml
<CustomField>
    <fullName>Flight_arrived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flight arrived</label>
    <type>Checkbox</type>
</CustomField>