HelloWorld/force-app/main/default/objects/Flight_schedule__c/fields/Flight_ready_to_Departure__c.field-meta.xml
<CustomField>
    <fullName>Flight_ready_to_Departure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flight ready to Departure</label>
    <type>Checkbox</type>
</CustomField>