HelloWorld/force-app/main/default/objects/Flight_schedule__c/fields/Secound_Pilot_Name__c.field-meta.xml
<CustomField>
    <fullName>Secound_Pilot_Name__c</fullName>
    <label>Secound Pilot Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>