HelloWorld/force-app/main/default/objects/Flight_schedule__c/fields/Source_location_City__c.field-meta.xml
<CustomField>
    <fullName>Source_location_City__c</fullName>
    <label>Source location City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>City</valueSetName>
    </valueSet>
</CustomField>