HelloWorld/force-app/main/default/objects/Flight_schedule__c/fields/Source_location_country__c.field-meta.xml
<CustomField>
    <fullName>Source_location_country__c</fullName>
    <label>Source location country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>