HelloWorld/force-app/main/default/objects/Flight_schedule__c/fields/Source_location_state__c.field-meta.xml
<CustomField>
    <fullName>Source_location_state__c</fullName>
    <label>Source location state</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>