HelloWorld/force-app/main/default/objects/Flight_schedule__c/fields/X1st_Pilot_Name__c.field-meta.xml
<CustomField>
    <fullName>X1st_Pilot_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1st Pilot Name</label>
    <referenceTo>Pilot__c</referenceTo>
    <relationshipLabel>Flight schedules (1st Pilot Name)</relationshipLabel>
    <relationshipName>Flight_schedules</relationshipName>
    <type>Lookup</type>
</CustomField>