HelloWorld/force-app/main/default/objects/Flight_schedule__c/fields/X2nd_Pilot_NAme__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Pilot_NAme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Pilot NAme</label>
    <referenceTo>Pilot__c</referenceTo>
    <relationshipLabel>Flight schedules (2nd Pilot NAme)</relationshipLabel>
    <relationshipName>Flight_schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>