HelloWorld/force-app/main/default/objects/Flight_schedule__c/fields/X5_mins_after_creation__c.field-meta.xml
<CustomField>
    <fullName>X5_mins_after_creation__c</fullName>
    <formula>CreatedDate + 0.01036</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5 mins after creation</label>
    <type>DateTime</type>
</CustomField>