HelloWorld/force-app/main/default/objects/Flight_schedule__c/fields/X5_mins_arrival__c.field-meta.xml
<CustomField>
    <fullName>X5_mins_arrival__c</fullName>
    <formula>Arrival_Date_Time__c +  0.00345</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5 mins - arrival</label>
    <type>DateTime</type>
</CustomField>