HelloWorld/force-app/main/default/objects/Flight_schedule__c/validationRules/Department_and_Arrival_should_be_diff.validationRule-meta.xml
<ValidationRule>
    <fullName>Department_and_Arrival_should_be_diff</fullName>
    <active>true</active>
    <errorConditionFormula>Arrival_Date_Time__c =  Departure_Date_Time__c</errorConditionFormula>
    <errorMessage>Department DateTime and Arrival DateTime should be different</errorMessage>
</ValidationRule>