HelloWorld/force-app/main/default/objects/Flight_schedule__c/validationRules/Departure_time_should_less_than_arrival.validationRule-meta.xml
<ValidationRule>
    <fullName>Departure_time_should_less_than_arrival</fullName>
    <active>true</active>
    <errorConditionFormula>Departure_Date_Time__c &gt;  Arrival_Date_Time__c</errorConditionFormula>
    <errorMessage>Departure DateTime should be less than Arrival DateTime</errorMessage>
</ValidationRule>