HelloWorld/force-app/main/default/objects/Flight_schedule__c/validationRules/Source_and_destination_city_should_diff.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_and_destination_city_should_diff</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( Source_location_City__c )= TEXT( Destination_City__c )</errorConditionFormula>
    <errorMessage>Source city and Destination city can not be same</errorMessage>
</ValidationRule>