HelloWorld/force-app/main/default/objects/Flight_schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Flight__c</columns>
    <columns>Status__c</columns>
    <columns>Duration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>